--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,19 @@
         "backup_manager.h": "c",
         "stat.h": "c",
         "md5.h": "c"
-    }
+    },
+    "editor.insertSpaces": true,
+    "editor.tabSize": 4,
+    "editor.detectIndentation": false,
+    "C_Cpp.clang_format_style": "file",
+    "C_Cpp.clang_format_fallbackStyle": "none",
+    "[c]": {
+        "editor.defaultFormatter": "xaver.clang-format",
+        "editor.formatOnSave": true
+    },
+    "editor.rulers": [80],
+    "files.trimTrailingWhitespace": true,
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
+    "C_Cpp.default.cStandard": "c17"
 }
